src/main/java/io/github/raulstanciu1/services/parser/generated/MCTParser.java
package io.github.raulstanciu1.services.parser.generated;// Generated from D:/Projects/Java_Projects/minimal-c-test-lang/src/main/antlr4/MCT.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class MCTParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMON_CODE=1, TEST=2, USING=3, ENVIRONMENT=4, TEST_CASE=5, DESCRIPTION=6, 
		STEPS=7, VAR=8, IN=9, OUT=10, DELTA=11, STR=12, PRE_TEST_CODE=13, TEST_CODE=14, 
		POST_TEST_CODE=15, LBRACE=16, RBRACE=17, LSQUARE=18, RSQUARE=19, LPAREN=20, 
		RPAREN=21, EQ=22, COMMA=23, ADDR=24, PTR=25, FLOAT=26, INT=27, STRING=28, 
		WORD=29, COMMENT=30, WS=31, BOM=32;
	public static final int
		RULE_prog = 0, RULE_code_block = 1, RULE_tests = 2, RULE_test_title = 3, 
		RULE_test_body = 4, RULE_test_case = 5, RULE_using_environments = 6, RULE_used_environments = 7, 
		RULE_environment = 8, RULE_environment_body = 9, RULE_test_case_title = 10, 
		RULE_test_case_body = 11, RULE_test_case_body_element = 12, RULE_test_case_description = 13, 
		RULE_test_case_steps = 14, RULE_test_case_var_decls = 15, RULE_pre_test_code = 16, 
		RULE_test_code = 17, RULE_post_test_code = 18, RULE_variable_decl = 19, 
		RULE_var_input = 20, RULE_var_output = 21, RULE_var_delta = 22, RULE_string_decl = 23, 
		RULE_str_input = 24, RULE_str_output = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "code_block", "tests", "test_title", "test_body", "test_case", 
			"using_environments", "used_environments", "environment", "environment_body", 
			"test_case_title", "test_case_body", "test_case_body_element", "test_case_description", 
			"test_case_steps", "test_case_var_decls", "pre_test_code", "test_code", 
			"post_test_code", "variable_decl", "var_input", "var_output", "var_delta", 
			"string_decl", "str_input", "str_output"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'COMMON_CODE'", "'TEST'", "'USING'", "'ENVIRONMENT'", "'TEST_CASE'", 
			"'DESCRIPTION'", "'STEPS'", "'VAR'", "'IN'", "'OUT'", "'DELTA'", "'STR'", 
			"'PRE_TEST_CODE'", "'TEST_CODE'", "'POST_TEST_CODE'", "'{'", "'}'", "'['", 
			"']'", "'('", "')'", "'='", "','", null, null, null, null, null, null, 
			null, null, "'\\uFEFF'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMON_CODE", "TEST", "USING", "ENVIRONMENT", "TEST_CASE", "DESCRIPTION", 
			"STEPS", "VAR", "IN", "OUT", "DELTA", "STR", "PRE_TEST_CODE", "TEST_CODE", 
			"POST_TEST_CODE", "LBRACE", "RBRACE", "LSQUARE", "RSQUARE", "LPAREN", 
			"RPAREN", "EQ", "COMMA", "ADDR", "PTR", "FLOAT", "INT", "STRING", "WORD", 
			"COMMENT", "WS", "BOM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MCT.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MCTParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MCTParser.EOF, 0); }
		public TerminalNode COMMON_CODE() { return getToken(MCTParser.COMMON_CODE, 0); }
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public List<TestsContext> tests() {
			return getRuleContexts(TestsContext.class);
		}
		public TestsContext tests(int i) {
			return getRuleContext(TestsContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCTVisitor ) return ((MCTVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMON_CODE) {
				{
				setState(52);
				match(COMMON_CODE);
				setState(53);
				code_block();
				}
			}

			setState(57); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(56);
				tests();
				}
				}
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEST );
			setState(61);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Code_blockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(MCTParser.LBRACE, 0); }
		public TerminalNode INT() { return getToken(MCTParser.INT, 0); }
		public TerminalNode RBRACE() { return getToken(MCTParser.RBRACE, 0); }
		public Code_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).enterCode_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).exitCode_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCTVisitor ) return ((MCTVisitor<? extends T>)visitor).visitCode_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Code_blockContext code_block() throws RecognitionException {
		Code_blockContext _localctx = new Code_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_code_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(LBRACE);
			setState(64);
			match(INT);
			setState(65);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TestsContext extends ParserRuleContext {
		public TerminalNode TEST() { return getToken(MCTParser.TEST, 0); }
		public TerminalNode LPAREN() { return getToken(MCTParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MCTParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(MCTParser.LBRACE, 0); }
		public Test_bodyContext test_body() {
			return getRuleContext(Test_bodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(MCTParser.RBRACE, 0); }
		public Test_titleContext test_title() {
			return getRuleContext(Test_titleContext.class,0);
		}
		public TestsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tests; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).enterTests(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).exitTests(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCTVisitor ) return ((MCTVisitor<? extends T>)visitor).visitTests(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TestsContext tests() throws RecognitionException {
		TestsContext _localctx = new TestsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tests);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(TEST);
			setState(68);
			match(LPAREN);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING) {
				{
				setState(69);
				test_title();
				}
			}

			setState(72);
			match(RPAREN);
			setState(73);
			match(LBRACE);
			setState(74);
			test_body();
			setState(75);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Test_titleContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(MCTParser.STRING, 0); }
		public Test_titleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).enterTest_title(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).exitTest_title(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCTVisitor ) return ((MCTVisitor<? extends T>)visitor).visitTest_title(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Test_titleContext test_title() throws RecognitionException {
		Test_titleContext _localctx = new Test_titleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_test_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Test_bodyContext extends ParserRuleContext {
		public List<EnvironmentContext> environment() {
			return getRuleContexts(EnvironmentContext.class);
		}
		public EnvironmentContext environment(int i) {
			return getRuleContext(EnvironmentContext.class,i);
		}
		public List<Test_caseContext> test_case() {
			return getRuleContexts(Test_caseContext.class);
		}
		public Test_caseContext test_case(int i) {
			return getRuleContext(Test_caseContext.class,i);
		}
		public Test_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).enterTest_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).exitTest_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCTVisitor ) return ((MCTVisitor<? extends T>)visitor).visitTest_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Test_bodyContext test_body() throws RecognitionException {
		Test_bodyContext _localctx = new Test_bodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_test_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(81);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ENVIRONMENT:
					{
					setState(79);
					environment();
					}
					break;
				case TEST_CASE:
					{
					setState(80);
					test_case();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ENVIRONMENT || _la==TEST_CASE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Test_caseContext extends ParserRuleContext {
		public TerminalNode TEST_CASE() { return getToken(MCTParser.TEST_CASE, 0); }
		public TerminalNode LPAREN() { return getToken(MCTParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MCTParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(MCTParser.LBRACE, 0); }
		public Test_case_bodyContext test_case_body() {
			return getRuleContext(Test_case_bodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(MCTParser.RBRACE, 0); }
		public Test_case_titleContext test_case_title() {
			return getRuleContext(Test_case_titleContext.class,0);
		}
		public Using_environmentsContext using_environments() {
			return getRuleContext(Using_environmentsContext.class,0);
		}
		public Test_caseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test_case; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).enterTest_case(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).exitTest_case(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCTVisitor ) return ((MCTVisitor<? extends T>)visitor).visitTest_case(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Test_caseContext test_case() throws RecognitionException {
		Test_caseContext _localctx = new Test_caseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_test_case);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(TEST_CASE);
			setState(86);
			match(LPAREN);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING) {
				{
				setState(87);
				test_case_title();
				}
			}

			setState(90);
			match(RPAREN);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==USING) {
				{
				setState(91);
				using_environments();
				}
			}

			setState(94);
			match(LBRACE);
			setState(95);
			test_case_body();
			setState(96);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Using_environmentsContext extends ParserRuleContext {
		public TerminalNode USING() { return getToken(MCTParser.USING, 0); }
		public Used_environmentsContext used_environments() {
			return getRuleContext(Used_environmentsContext.class,0);
		}
		public Using_environmentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_using_environments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).enterUsing_environments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).exitUsing_environments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCTVisitor ) return ((MCTVisitor<? extends T>)visitor).visitUsing_environments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Using_environmentsContext using_environments() throws RecognitionException {
		Using_environmentsContext _localctx = new Using_environmentsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_using_environments);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(USING);
			setState(99);
			used_environments();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Used_environmentsContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(MCTParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(MCTParser.WORD, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MCTParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MCTParser.COMMA, i);
		}
		public Used_environmentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_used_environments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).enterUsed_environments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).exitUsed_environments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCTVisitor ) return ((MCTVisitor<? extends T>)visitor).visitUsed_environments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Used_environmentsContext used_environments() throws RecognitionException {
		Used_environmentsContext _localctx = new Used_environmentsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_used_environments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(WORD);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(102);
				match(COMMA);
				setState(103);
				match(WORD);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnvironmentContext extends ParserRuleContext {
		public TerminalNode ENVIRONMENT() { return getToken(MCTParser.ENVIRONMENT, 0); }
		public TerminalNode WORD() { return getToken(MCTParser.WORD, 0); }
		public TerminalNode LBRACE() { return getToken(MCTParser.LBRACE, 0); }
		public Environment_bodyContext environment_body() {
			return getRuleContext(Environment_bodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(MCTParser.RBRACE, 0); }
		public EnvironmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_environment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).enterEnvironment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).exitEnvironment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCTVisitor ) return ((MCTVisitor<? extends T>)visitor).visitEnvironment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnvironmentContext environment() throws RecognitionException {
		EnvironmentContext _localctx = new EnvironmentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_environment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(ENVIRONMENT);
			setState(110);
			match(WORD);
			setState(111);
			match(LBRACE);
			setState(112);
			environment_body();
			setState(113);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Environment_bodyContext extends ParserRuleContext {
		public List<Variable_declContext> variable_decl() {
			return getRuleContexts(Variable_declContext.class);
		}
		public Variable_declContext variable_decl(int i) {
			return getRuleContext(Variable_declContext.class,i);
		}
		public List<String_declContext> string_decl() {
			return getRuleContexts(String_declContext.class);
		}
		public String_declContext string_decl(int i) {
			return getRuleContext(String_declContext.class,i);
		}
		public Environment_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_environment_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).enterEnvironment_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).exitEnvironment_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCTVisitor ) return ((MCTVisitor<? extends T>)visitor).visitEnvironment_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Environment_bodyContext environment_body() throws RecognitionException {
		Environment_bodyContext _localctx = new Environment_bodyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_environment_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(117);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VAR:
					{
					setState(115);
					variable_decl();
					}
					break;
				case STR:
					{
					setState(116);
					string_decl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==VAR || _la==STR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Test_case_titleContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(MCTParser.STRING, 0); }
		public Test_case_titleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test_case_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).enterTest_case_title(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).exitTest_case_title(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCTVisitor ) return ((MCTVisitor<? extends T>)visitor).visitTest_case_title(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Test_case_titleContext test_case_title() throws RecognitionException {
		Test_case_titleContext _localctx = new Test_case_titleContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_test_case_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Test_case_bodyContext extends ParserRuleContext {
		public List<Test_case_body_elementContext> test_case_body_element() {
			return getRuleContexts(Test_case_body_elementContext.class);
		}
		public Test_case_body_elementContext test_case_body_element(int i) {
			return getRuleContext(Test_case_body_elementContext.class,i);
		}
		public Test_case_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test_case_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).enterTest_case_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).exitTest_case_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCTVisitor ) return ((MCTVisitor<? extends T>)visitor).visitTest_case_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Test_case_bodyContext test_case_body() throws RecognitionException {
		Test_case_bodyContext _localctx = new Test_case_bodyContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_test_case_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 61888L) != 0)) {
				{
				{
				setState(123);
				test_case_body_element();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Test_case_body_elementContext extends ParserRuleContext {
		public Test_case_descriptionContext test_case_description() {
			return getRuleContext(Test_case_descriptionContext.class,0);
		}
		public Test_case_stepsContext test_case_steps() {
			return getRuleContext(Test_case_stepsContext.class,0);
		}
		public Test_case_var_declsContext test_case_var_decls() {
			return getRuleContext(Test_case_var_declsContext.class,0);
		}
		public Pre_test_codeContext pre_test_code() {
			return getRuleContext(Pre_test_codeContext.class,0);
		}
		public Test_codeContext test_code() {
			return getRuleContext(Test_codeContext.class,0);
		}
		public Post_test_codeContext post_test_code() {
			return getRuleContext(Post_test_codeContext.class,0);
		}
		public Test_case_body_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test_case_body_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).enterTest_case_body_element(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCTListener ) ((MCTListener)listener).exitTest_case_body_element(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCTVisitor ) return ((MCTVisitor<? extends T>)visitor).visitTest_case_body_element(this);
			else return visitor.visitChildren(this);
		}
	}
